src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger'", "'printInteger'", "'readFloat'", 
                     "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'", 
                     "<INVALID>", "<INVALID>", "'integer'", "'float'", "'string'", 
                     "'boolean'", "'auto'", "'break'", "'do'", "'else'", 
                     "'true'", "'false'", "'function'", "'for'", "'if'", 
                     "'return'", "'while'", "'void'", "'out'", "'continue'", 
                     "'array'", "'inherit'", "'of'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'.'", "','", "';'", "':'", "'{'", "'}'", "'['", "']'", 
                     "'='", "'+'", "'*'", "'/'", "'%'", "'!'", "'-'", "'=='", 
                     "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", 
                     "'::'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Comment", 
                      "LineCmt", "Inttype", "Floattype", "Stringtype", "Booleantype", 
                      "Autotype", "Breakkey", "Dokey", "Else", "Trueboolean", 
                      "Falseboolean", "Functionkey", "Forkey", "Ifkey", 
                      "Returnkey", "Whilekey", "Voidtype", "Outkey", "Continuekey", 
                      "Arraytype", "Inheritkey", "Ofkey", "Identifiers", 
                      "Int", "Boolean", "String", "FLOAT", "LB", "RB", "DOT", 
                      "COMMA", "SEMI", "COLON", "LCB", "RCB", "LSB", "RSB", 
                      "ASS", "PLUS", "MULT", "DIV", "MOD", "NOT", "MINUS", 
                      "EQUAL", "NOT_EQUAL", "GT", "LT", "GTE", "LTE", "LOGICAL_AND", 
                      "LOGICAL_OR", "Stringopr", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_parsercall_list = 1
    RULE_parsercall = 2
    RULE_funcType = 3
    RULE_typearray = 4
    RULE_array_expr = 5
    RULE_arraytypeof = 6
    RULE_intlist = 7
    RULE_idlist = 8
    RULE_expression_list = 9
    RULE_vardecl = 10
    RULE_varinit = 11
    RULE_re_vardecl = 12
    RULE_parameters = 13
    RULE_parameters_list = 14
    RULE_funcdecl = 15
    RULE_indexopr = 16
    RULE_callfunc = 17
    RULE_expression_BT = 18
    RULE_stringoprExpr = 19
    RULE_equalityExpr = 20
    RULE_logicalExpr = 21
    RULE_addExpr = 22
    RULE_multExpr = 23
    RULE_unaryExpr = 24
    RULE_atom = 25
    RULE_expression_BT_list = 26
    RULE_allstatement = 27
    RULE_assignment = 28
    RULE_if_statement = 29
    RULE_for_statement = 30
    RULE_assignment_offor = 31
    RULE_while_statements = 32
    RULE_do_while_statements = 33
    RULE_break_stt = 34
    RULE_continue_stt = 35
    RULE_retunr_stt = 36
    RULE_call_stt = 37
    RULE_blockstatement = 38
    RULE_block_allstatement = 39
    RULE_blockstt = 40
    RULE_special_function = 41
    RULE_readInt_function = 42
    RULE_printInteger_function = 43
    RULE_readFloat_function = 44
    RULE_writeFloat_function = 45
    RULE_readBoolean_function = 46
    RULE_printBoolean_function = 47
    RULE_readString_function = 48
    RULE_printString_function = 49
    RULE_super_function = 50
    RULE_preventDefault = 51
    RULE_typein = 52
    RULE_booleann = 53

    ruleNames =  [ "program", "parsercall_list", "parsercall", "funcType", 
                   "typearray", "array_expr", "arraytypeof", "intlist", 
                   "idlist", "expression_list", "vardecl", "varinit", "re_vardecl", 
                   "parameters", "parameters_list", "funcdecl", "indexopr", 
                   "callfunc", "expression_BT", "stringoprExpr", "equalityExpr", 
                   "logicalExpr", "addExpr", "multExpr", "unaryExpr", "atom", 
                   "expression_BT_list", "allstatement", "assignment", "if_statement", 
                   "for_statement", "assignment_offor", "while_statements", 
                   "do_while_statements", "break_stt", "continue_stt", "retunr_stt", 
                   "call_stt", "blockstatement", "block_allstatement", "blockstt", 
                   "special_function", "readInt_function", "printInteger_function", 
                   "readFloat_function", "writeFloat_function", "readBoolean_function", 
                   "printBoolean_function", "readString_function", "printString_function", 
                   "super_function", "preventDefault", "typein", "booleann" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    Comment=11
    LineCmt=12
    Inttype=13
    Floattype=14
    Stringtype=15
    Booleantype=16
    Autotype=17
    Breakkey=18
    Dokey=19
    Else=20
    Trueboolean=21
    Falseboolean=22
    Functionkey=23
    Forkey=24
    Ifkey=25
    Returnkey=26
    Whilekey=27
    Voidtype=28
    Outkey=29
    Continuekey=30
    Arraytype=31
    Inheritkey=32
    Ofkey=33
    Identifiers=34
    Int=35
    Boolean=36
    String=37
    FLOAT=38
    LB=39
    RB=40
    DOT=41
    COMMA=42
    SEMI=43
    COLON=44
    LCB=45
    RCB=46
    LSB=47
    RSB=48
    ASS=49
    PLUS=50
    MULT=51
    DIV=52
    MOD=53
    NOT=54
    MINUS=55
    EQUAL=56
    NOT_EQUAL=57
    GT=58
    LT=59
    GTE=60
    LTE=61
    LOGICAL_AND=62
    LOGICAL_OR=63
    Stringopr=64
    WS=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parsercall_list(self):
            return self.getTypedRuleContext(MT22Parser.Parsercall_listContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.parsercall_list()
            self.state = 109
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parsercall_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parsercall(self):
            return self.getTypedRuleContext(MT22Parser.ParsercallContext,0)


        def parsercall_list(self):
            return self.getTypedRuleContext(MT22Parser.Parsercall_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parsercall_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParsercall_list" ):
                return visitor.visitParsercall_list(self)
            else:
                return visitor.visitChildren(self)




    def parsercall_list(self):

        localctx = MT22Parser.Parsercall_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_parsercall_list)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.parsercall()
                self.state = 112
                self.parsercall_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.parsercall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParsercallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parsercall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParsercall" ):
                return visitor.visitParsercall(self)
            else:
                return visitor.visitChildren(self)




    def parsercall(self):

        localctx = MT22Parser.ParsercallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parsercall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.state = 117
                self.vardecl()
                pass

            elif la_ == 2:
                self.state = 118
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Inttype(self):
            return self.getToken(MT22Parser.Inttype, 0)

        def Floattype(self):
            return self.getToken(MT22Parser.Floattype, 0)

        def Stringtype(self):
            return self.getToken(MT22Parser.Stringtype, 0)

        def Booleantype(self):
            return self.getToken(MT22Parser.Booleantype, 0)

        def Voidtype(self):
            return self.getToken(MT22Parser.Voidtype, 0)

        def Autotype(self):
            return self.getToken(MT22Parser.Autotype, 0)

        def arraytypeof(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeofContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncType" ):
                return visitor.visitFuncType(self)
            else:
                return visitor.visitChildren(self)




    def funcType(self):

        localctx = MT22Parser.FuncTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcType)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.Inttype]:
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(MT22Parser.Inttype)
                pass
            elif token in [MT22Parser.Floattype]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(MT22Parser.Floattype)
                pass
            elif token in [MT22Parser.Stringtype]:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self.match(MT22Parser.Stringtype)
                pass
            elif token in [MT22Parser.Booleantype]:
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.match(MT22Parser.Booleantype)
                pass
            elif token in [MT22Parser.Voidtype]:
                self.enterOuterAlt(localctx, 5)
                self.state = 125
                self.match(MT22Parser.Voidtype)
                pass
            elif token in [MT22Parser.Autotype]:
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.match(MT22Parser.Autotype)
                pass
            elif token in [MT22Parser.Arraytype]:
                self.enterOuterAlt(localctx, 7)
                self.state = 127
                self.arraytypeof()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypearrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Inttype(self):
            return self.getToken(MT22Parser.Inttype, 0)

        def Floattype(self):
            return self.getToken(MT22Parser.Floattype, 0)

        def Stringtype(self):
            return self.getToken(MT22Parser.Stringtype, 0)

        def Booleantype(self):
            return self.getToken(MT22Parser.Booleantype, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typearray

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypearray" ):
                return visitor.visitTypearray(self)
            else:
                return visitor.visitChildren(self)




    def typearray(self):

        localctx = MT22Parser.TypearrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typearray)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.Inttype) | (1 << MT22Parser.Floattype) | (1 << MT22Parser.Stringtype) | (1 << MT22Parser.Booleantype))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def expression_BT_list(self):
            return self.getTypedRuleContext(MT22Parser.Expression_BT_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_expr" ):
                return visitor.visitArray_expr(self)
            else:
                return visitor.visitChildren(self)




    def array_expr(self):

        localctx = MT22Parser.Array_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(MT22Parser.LCB)
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__0, MT22Parser.T__1, MT22Parser.T__2, MT22Parser.T__3, MT22Parser.T__4, MT22Parser.T__5, MT22Parser.T__6, MT22Parser.T__7, MT22Parser.T__8, MT22Parser.T__9, MT22Parser.Trueboolean, MT22Parser.Falseboolean, MT22Parser.Identifiers, MT22Parser.Int, MT22Parser.String, MT22Parser.FLOAT, MT22Parser.LB, MT22Parser.LCB, MT22Parser.NOT, MT22Parser.MINUS]:
                self.state = 133
                self.expression_BT_list()
                pass
            elif token in [MT22Parser.RCB]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 137
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraytypeofContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Arraytype(self):
            return self.getToken(MT22Parser.Arraytype, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def Ofkey(self):
            return self.getToken(MT22Parser.Ofkey, 0)

        def typearray(self):
            return self.getTypedRuleContext(MT22Parser.TypearrayContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraytypeof

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraytypeof" ):
                return visitor.visitArraytypeof(self)
            else:
                return visitor.visitChildren(self)




    def arraytypeof(self):

        localctx = MT22Parser.ArraytypeofContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arraytypeof)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(MT22Parser.Arraytype)
            self.state = 140
            self.match(MT22Parser.LSB)
            self.state = 141
            self.intlist()
            self.state = 142
            self.match(MT22Parser.RSB)
            self.state = 143
            self.match(MT22Parser.Ofkey)
            self.state = 144
            self.typearray()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Int(self):
            return self.getToken(MT22Parser.Int, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def intlist(self):
            return self.getTypedRuleContext(MT22Parser.IntlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_intlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntlist" ):
                return visitor.visitIntlist(self)
            else:
                return visitor.visitChildren(self)




    def intlist(self):

        localctx = MT22Parser.IntlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_intlist)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(MT22Parser.Int)
                self.state = 147
                self.match(MT22Parser.COMMA)
                self.state = 148
                self.intlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(MT22Parser.Int)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifiers(self):
            return self.getToken(MT22Parser.Identifiers, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idlist)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MT22Parser.Identifiers)
                self.state = 153
                self.match(MT22Parser.COMMA)
                self.state = 154
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(MT22Parser.Identifiers)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expression_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_BT(self):
            return self.getTypedRuleContext(MT22Parser.Expression_BTContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MT22Parser.Expression_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expression_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_list" ):
                return visitor.visitExpression_list(self)
            else:
                return visitor.visitChildren(self)




    def expression_list(self):

        localctx = MT22Parser.Expression_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expression_list)
        try:
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.expression_BT()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.expression_BT()
                self.state = 160
                self.match(MT22Parser.COMMA)
                self.state = 161
                self.expression_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def typein(self):
            return self.getTypedRuleContext(MT22Parser.TypeinContext,0)


        def arraytypeof(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeofContext,0)


        def varinit(self):
            return self.getTypedRuleContext(MT22Parser.VarinitContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_vardecl)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.idlist()
                self.state = 166
                self.match(MT22Parser.COLON)
                self.state = 169
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.Inttype, MT22Parser.Floattype, MT22Parser.Stringtype, MT22Parser.Booleantype, MT22Parser.Autotype]:
                    self.state = 167
                    self.typein()
                    pass
                elif token in [MT22Parser.Arraytype]:
                    self.state = 168
                    self.arraytypeof()
                    pass
                else:
                    raise NoViableAltException(self)
